--- a/package.json
+++ b/package.json
@@ -26,11 +26,9 @@
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
-  "dependencies": {
-    "browser-cookies": "^1.0.8"
-  },
+  "dependencies": {},
   "scripts": {
-    "build": "webpack --config bin/webpack.config.js",
+    "build": "webpack --config ./bin/webpack.config.js",
     "start": "node ./bin/server.js",
     "test": "eslint src",
     "unittest": "node tests/lib/index.js"
